--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   </head>
 
   <body>
+  	sourced from https://www.tutorialspoint.com/angular2/
     <my-app>Loading AppComponent content here ...</my-app>
   </body>
 </html>
